Wrote tests for the lobby architecture.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
+  "scripts":{
+    "test": "jest"
+  },
   "dependencies": {
     "apidoc": "^0.17.6",
     "bcryptjs": "^2.4.3",
@@ -22,6 +25,10 @@
     "path": "^0.12.7",
     "pg": "^7.4.2",
     "sequelize": "^4.37.6",
+    "socket.io": "^2.1.1",
     "stripe": "^5.8.0"
+  },
+  "devDependencies": {
+    "jest": "^23.1.0"
   }
 }
