feat: progress on stripe

--- a/.sample.env
+++ b/.sample.env
@@ -3,5 +3,7 @@ JWT_SECRET=
 MAILCHIMP_API=
 MAILGUN_API=
 MAILGUN_DOMAIN=
-STRIPE_LIVE_KEY=
+STRIPE_KEY=
+WASABI_SECRET_KEY=
+WASABI_ACCESS_KEY=
 DOMAIN=
